[package]
name = "imgui-ggez-starter"
version = "0.1.0"
authors = ["oliviaifrim"]
edition = "2018"

[dependencies]
ggez = "0.4.4"

gfx_core = "0.8.3"
gfx_device_gl = "0.15.3"

imgui = {  git="https://github.com/Gekkio/imgui-rs" }
imgui-gfx-renderer = { git="https://github.com/Gekkio/imgui-rs" }
imgui-sys = { git="https://github.com/Gekkio/imgui-rs" }
